--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,15 @@
 make a python script to grab all the useful data from the csv, then import it into db
-make new statements for user creation
-make import statements for new workouts & exercises into each of the tables
-make view statements for seeing the query returned from a user-id
-then make those into full fledged functions & add modularity
+
+rework postgres info with new table format, build schema
+
+make view, create, update, delete functions for exercise, workout, routine and log
+
 add unit tests & integration tests for querying/expected results
+
 then add github actions without the ui implementation
+
 host it on firebase post UI
+
 then add execution criteria
 
 [OPTIONAL]
