--- a/csss.ipynb
+++ b/csss.ipynb
@@ -95,15 +95,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2741362554.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[24], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    \"Exercise\", \"Difficulty Level\",|\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               Exercise Difficulty Level Target Muscle Group  \\\n",
+      "0               Stability Ball Dead Bug         Beginner          Abdominals   \n",
+      "1                          Glute Bridge         Beginner              Glutes   \n",
+      "2                              Bird Dog         Beginner          Abdominals   \n",
+      "3  Stability Ball Seated Russian Twist          Beginner          Abdominals   \n",
+      "4  Stability Ball Feet Elevated Crunch          Beginner          Abdominals   \n",
+      "5              Ring Hanging Knee Raise      Intermediate          Abdominals   \n",
+      "6           Parallette Mountain Climber           Novice          Abdominals   \n",
+      "7                    Parallette Push Up           Novice               Chest   \n",
+      "8                   Knee Hover Bird Dog     Intermediate          Abdominals   \n",
+      "9                   Stability Ball Pass           Novice          Abdominals   \n",
+      "\n",
+      "  Prime Mover Muscle   Secondary Muscle Tertiary Muscle Primary Equipment  \\\n",
+      "0   Rectus Abdominis                NaN             NaN    Stability Ball   \n",
+      "1    Gluteus Maximus                NaN             NaN        Bodyweight   \n",
+      "2   Rectus Abdominis                NaN             NaN        Bodyweight   \n",
+      "3           Obliques  Rectus Abdominis              NaN    Stability Ball   \n",
+      "4   Rectus Abdominis                NaN             NaN    Stability Ball   \n",
+      "5   Rectus Abdominis          Iliopsoas  Rectus Femoris   Gymnastic Rings   \n",
+      "6   Rectus Abdominis                NaN             NaN   Parallette Bars   \n",
+      "7   Pectoralis Major    Triceps Brachii             NaN   Parallette Bars   \n",
+      "8   Rectus Abdominis                NaN             NaN        Bodyweight   \n",
+      "9   Rectus Abdominis                NaN             NaN    Stability Ball   \n",
+      "\n",
+      "   # Primary Items Secondary Equipment  # Secondary Items  ...  \\\n",
+      "0                1                 NaN                NaN  ...   \n",
+      "1                0                 NaN                NaN  ...   \n",
+      "2                0                 NaN                NaN  ...   \n",
+      "3                1                 NaN                NaN  ...   \n",
+      "4                1                 NaN                NaN  ...   \n",
+      "5                2                 NaN                NaN  ...   \n",
+      "6                2                 NaN                NaN  ...   \n",
+      "7                2                 NaN                NaN  ...   \n",
+      "8                0                 NaN                NaN  ...   \n",
+      "9                1                 NaN                NaN  ...   \n",
+      "\n",
+      "  Movement Pattern #1 Movement Pattern #2 Movement Pattern #3  \\\n",
+      "0      Anti-Extension                 NaN                 NaN   \n",
+      "1       Hip Extension                 NaN                 NaN   \n",
+      "2     Anti-Rotational                 NaN                 NaN   \n",
+      "3          Rotational                 NaN                 NaN   \n",
+      "4      Spinal Flexion                 NaN                 NaN   \n",
+      "5      Spinal Flexion                 NaN                 NaN   \n",
+      "6      Anti-Extension      Spinal Flexion                 NaN   \n",
+      "7     Horizontal Push                 NaN                 NaN   \n",
+      "8     Anti-Rotational                 NaN                 NaN   \n",
+      "9         Hip Flexion                 NaN                 NaN   \n",
+      "\n",
+      "  Plane Of Motion #1 Plane Of Motion #2 Plane Of Motion #3 Body Region  \\\n",
+      "0     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "1     Sagittal Plane                NaN                NaN  Lower Body   \n",
+      "2     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "3   Transverse Plane                NaN                NaN  Midsection   \n",
+      "4     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "5     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "6     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "7     Sagittal Plane                NaN                NaN  Upper Body   \n",
+      "8     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "9     Sagittal Plane                NaN                NaN  Midsection   \n",
+      "\n",
+      "   Mechanics     Laterality Exercise Classification  \n",
+      "0   Compound  Contralateral                Postural  \n",
+      "1   Compound      Bilateral                     NaN  \n",
+      "2   Compound  Contralateral                Postural  \n",
+      "3   Compound      Bilateral                     NaN  \n",
+      "4  Isolation      Bilateral                     NaN  \n",
+      "5   Compound      Bilateral                     NaN  \n",
+      "6   Compound     Unilateral                     NaN  \n",
+      "7   Compound      Bilateral            Calisthenics  \n",
+      "8   Compound  Contralateral                Postural  \n",
+      "9   Compound      Bilateral                     NaN  \n",
+      "\n",
+      "[10 rows x 26 columns]\n"
      ]
     }
    ],
