--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
-# make a python script to grab all the useful data from the csv
-then import it into db
-
-rework postgres info with new table format, build schema
-
-make view, create, update, delete functions for exercise, workout, routine and log
+all views done,
+make log, routine, workout create
+make delete log, routine, workout, (not exercise)
 
 add unit tests & integration tests for querying/expected results
 
